# telegram_bot

./: Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
core/: api_interfaces.py  database.py  text_handlers.py  utils.py
core/data_access_layer/: user.py
core/db_models/: models.py
core/middlewares/: outer_middlewares.py
core/routers/: messages_router.py
core/schemas/: pydantic_schemas.py
migrations/: env.py
migrations/versions/: 0eab44a95827_initial.py  b95907c2b632_initial.py  bed777b56004_initial.py
